feat: add versioned OSS quests
